# conflaguration

./: .rustfmt.toml  Cargo.toml  README.md
crates/conflaguration-derive/: Cargo.toml
crates/conflaguration-derive/src/: lib.rs
examples/database/: Cargo.toml
examples/database/src/: lib.rs
examples/http/: Cargo.toml  config.toml
examples/http/src/: main.rs
examples/logging/: Cargo.toml
examples/logging/src/: lib.rs
src/: builder.rs  file.rs  lib.rs
tests/: builder.rs  compile_fail.rs  derive.rs  file.rs
tests/compile_fail/: bare_default_with_default_value.rs  bare_default_with_default_value.stderr  config_display_on_enum.rs  config_display_on_enum.stderr  default_and_default_str.rs  default_and_default_str.stderr  nested_on_non_settings.rs  nested_on_non_settings.stderr  nested_with_default.rs  nested_with_default.stderr  nested_with_override.rs  nested_with_override.stderr  nested_with_resolve_with.rs  nested_with_resolve_with.stderr  override_prefix_without_nested.rs  override_prefix_without_nested.stderr  resolve_with_bad_path.rs  resolve_with_bad_path.stderr  settings_on_enum.rs  settings_on_enum.stderr  settings_on_tuple_struct.rs  settings_on_tuple_struct.stderr  settings_on_unit_struct.rs  settings_on_unit_struct.stderr  skip_with_default.rs  skip_with_default.stderr  skip_with_override.rs  skip_with_override.stderr  unknown_field_attribute.rs  unknown_field_attribute.stderr  unknown_struct_attribute.rs  unknown_struct_attribute.stderr  validate_on_enum.rs  validate_on_enum.stderr
