[package]
name = "example-http"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
conflaguration = { path = "../..", features = ["derive", "toml"] }
serde = { version = "1", features = ["derive"] }
example-database = { path = "../database" }
example-logging = { path = "../logging" }
